corecciones leves y organizacion de boxes

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
         <h1 id="titulo-principal">Mercado libre</h1>
         <!--Logo-->
         <div class="nav-bar-img">
-            <img src="imagenes/mercadolibre logo.png" alt="logo" height="200" width="500">
-        </div>
+          <a href="index.html">
+          <img src="imagenes/mercadolibre logo.png" alt="logo" height="200" width="500">
+          </a>
+      </div>
         <!--Barra de busqueda-->
         <div class="barra-busqueda">
             <input type="text" placeholder="Buscar Productos, marcas y más...">
@@ -54,7 +56,7 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main class="main">
         <!--Carousel Alto-->
         <section class="main-carousel-alto">
             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
@@ -84,7 +86,7 @@
             <div class="main-producto-tarjeta-seccion">
                 <!--Tarjeta 1-->
                 
-                <div class="card" style="width: 18rem;">
+                <div class="card sombra" style="width: 18rem;">
                     <h5>Visto Recientemente</h5>
                     <img src="imagenes/main-tarjeta/card-img-1.png" class="card-img-top" alt="img-1">
                     <div class="card-body">
@@ -99,7 +101,7 @@
                     </div>
                 </div>
                 <!--Tarjeta 2-->
-                <div class="card" style="width: 18rem;">
+                <div class="card sombra" style="width: 18rem;">
                     <h5>Porque te interesa</h5>
                     <img src="imagenes/main-tarjeta/card-img-2.png" class="card-img-top" alt="img-1">
                     <div class="card-body">
@@ -114,7 +116,7 @@
                     </div>
                 </div>
                 <!--Tarjeta 3-->
-                <div class="card" style="width: 18rem;">
+                <div class="card sombra" style="width: 18rem;">
                     <h5>Lo quieres</h5>
                     <img src="imagenes/main-tarjeta/card-img-3.png" class="card-img-top" alt="img-1">
                     <div class="card-body">
@@ -129,7 +131,7 @@
                     </div>
                 </div>
                 <!--Tarjeta 4-->
-                <div class="card" style="width: 18rem;">
+                <div class="card sombra" style="width: 18rem;">
                     <h5>Lo Deseas</h5>
                     <img src="imagenes/main-tarjeta/card-img-4.png" class="card-img-top" alt="img-1">
                     <div class="card-body">
@@ -144,7 +146,7 @@
                     </div>
                 </div>
                 <!--Tarjeta 5-->
-                <div class="card" style="width: 18rem;">
+                <div class="card sombra" style="width: 18rem;">
                     <h5>Para los hermanos</h5>
                     <img src="imagenes/main-tarjeta/card-img-5.png" class="card-img-top" alt="img-1">
                     <div class="card-body">
@@ -170,7 +172,7 @@
               <div class="row row-cols-1 row-cols-md-5 g-4">
                   <!--tarjeta1-->
                   <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100  sombra">
                       <img src="imagenes/main-mysterybox/mb-1.png" class="card-img-top" alt="mbNiños">
                       <div class="card-body">
                         <h5 class="card-title">Juguetes Mistery Box Para Niños</h5>
@@ -180,7 +182,7 @@
                   </div>
                   <!--tarjeta2-->
                   <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100 sombra">
                       <img src="imagenes/main-mysterybox/mb-2.png" class="card-img-top" alt="mbRandom">
                       <div class="card-body">
                         <h5 class="card-title">Caja Sorpresa Misteriosa Mistery Box Random</h5>
@@ -190,7 +192,7 @@
                   </div>
                   <!--tarjeta3-->
                   <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100 sombra">
                       <img src="imagenes/main-mysterybox/mb-3.png" class="card-img-top" alt="mbPElect">
                       <div class="card-body">
                         <h5 class="card-title">Mistery Box Caja Misteriosa Productos Electrónicos</h5>
@@ -200,7 +202,7 @@
                   </div>
                   <!--tarjeta4-->
                   <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100 sombra">
                       <img src="imagenes/main-mysterybox/mb-4.png" class="card-img-top" alt="mbSC">
                       <div class="card-body">
                         <h5 class="card-title">Caja Misteriosa Sorpresa Ciclismo</h5>
@@ -210,7 +212,7 @@
                   </div>
                   <!--tarjeta5-->
                   <div class="col">
-                      <div class="card h-100">
+                      <div class="card h-100 sombra">
                         <img src="imagenes/main-mysterybox/mb-5.png" class="card-img-top" alt="mbPcosme">
                         <div class="card-body">
                           <h5 class="card-title">Mistery Box Caja Misteriosa Productos Cosmeticos</h5>
@@ -220,7 +222,7 @@
                     </div>
                     <!--tarjeta6-->
                     <div class="col">
-                      <div class="card h-100">
+                      <div class="card h-100 sombra">
                         <img src="imagenes/main-mysterybox/mb-6.png" class="card-img-top" alt="mbPokemon">
                         <div class="card-body">
                           <h5 class="card-title">Pokemon Tcg Caja Misteriosa Navidad/cumpleaños #1</h5>
