--- a/nuevaCuenta.html
+++ b/nuevaCuenta.html
@@ -27,7 +27,9 @@
         <h1 id="titulo-principal">Mercado libre</h1>
         <!--Logo-->
         <div class="nav-bar-img">
+            <a href="index.html">
             <img src="imagenes/mercadolibre logo.png" alt="logo" height="200" width="500">
+            </a>
         </div>
         <!--Barra de busqueda-->
         <div class="barra-busqueda">
@@ -36,7 +38,7 @@
         </div>
         <!--Opciones barra de navegación-->
         <div class="nav-background">
-            <nav class="nav-bar contenedor">
+            <nav class="nav-bar contenedor ">
                 <a href="">Categorias</a>
                 <a href="">Ofertas</a>
                 <a href="">Historial</a>
@@ -57,7 +59,7 @@
     <section class="nuevaCuenta">
         <h1 class="nc-titulo">Nueva Cuenta</h1>
         <!--Formulario-->
-        <form action="" class="formulario-crearCuenta">
+        <form action="" class="formulario-crearCuenta  sombra">
             <fieldset>
                 <legend>Ingresar Datos</legend>
                 <!--Campos-->
@@ -92,7 +94,8 @@
                     </div>
 
                     <div  class="formulario-boton">
-                        <input class="boton" type="button" value="Iniciar Sesion">
+                        <input class="boton-nuevaCuenta" type="button" value="Limpiar">
+                        <input class="boton-nuevaCuenta" type="button" value="Crear Cuenta">
                     </div>
                 </div>
             </fieldset>
