--- a/iniciarSesion.html
+++ b/iniciarSesion.html
@@ -27,7 +27,9 @@
         <h1 id="titulo-principal">Mercado libre</h1>
         <!--Logo-->
         <div class="nav-bar-img">
+            <a href="index.html">
             <img src="imagenes/mercadolibre logo.png" alt="logo" height="200" width="500">
+            </a>
         </div>
         <!--Barra de busqueda-->
         <div class="barra-busqueda">
@@ -56,7 +58,7 @@
     <section class="iniciarSesion">
         <h1 class="is-titulo">Iniciar Sesion</h1>
         <!--Formulario-->
-        <form action="" class="formulario">
+        <form action="" class="formulario  sombra">
             <fieldset>
                 <legend>Ingresar Datos</legend>
                 <!--Campos-->
