--- a/index.html
+++ b/index.html
@@ -120,9 +120,11 @@
             <div class="main-producto-tarjeta-seccion">
                 <!--Tarjeta 1-->
                 
-                <div class="card sombra" style="width: 18rem;">
+                <div class="card sombra" style="width: 18rem; height: 35rem;">
                     <h5>Visto Recientemente</h5>
-                    <img src="imagenes/main-tarjeta/card-img-1.png" class="card-img-top" alt="img-1">
+                    <a href="ejemploCarrito.html">
+                      <img src="imagenes/main-tarjeta/card-img-1.png" class="card-img-top" alt="img-1">
+                    </a>
                     <div class="card-body">
                       <p class="card-text">
                         Pomoción 6 Individuales Ecocuero
@@ -135,7 +137,7 @@
                     </div>
                 </div>
                 <!--Tarjeta 2-->
-                <div class="card sombra" style="width: 18rem;">
+                <div class="card sombra" style="width: 18rem; height: 35rem;">
                     <h5>Porque te interesa</h5>
                     <img src="imagenes/main-tarjeta/card-img-2.png" class="card-img-top" alt="img-1">
                     <div class="card-body">
@@ -150,7 +152,7 @@
                     </div>
                 </div>
                 <!--Tarjeta 3-->
-                <div class="card sombra" style="width: 18rem;">
+                <div class="card sombra" style="width: 18rem; height: 35rem;">
                     <h5>Lo quieres</h5>
                     <img src="imagenes/main-tarjeta/card-img-3.png" class="card-img-top" alt="img-1">
                     <div class="card-body">
@@ -165,9 +167,9 @@
                     </div>
                 </div>
                 <!--Tarjeta 4-->
-                <div class="card sombra" style="width: 18rem;">
+                <div class="card sombra" style="width: 18rem; height: 35rem;">
                     <h5>Lo Deseas</h5>
-                    <img src="imagenes/main-tarjeta/card-img-4.png" class="card-img-top" alt="img-1">
+                    <img src="imagenes/main-tarjeta/card-img-4.png" class="card-img-top" alt="img-1" height="380">
                     <div class="card-body">
                       <p class="card-text">
                         Chocolate Barra Costa 52% Cacao Con Almendras 150 Grs
@@ -180,7 +182,7 @@
                     </div>
                 </div>
                 <!--Tarjeta 5-->
-                <div class="card sombra" style="width: 18rem;">
+                <div class="card sombra" style="width: 18rem; height: 35rem;">
                     <h5>Para los hermanos</h5>
                     <img src="imagenes/main-tarjeta/card-img-5.png" class="card-img-top" alt="img-1">
                     <div class="card-body">
