Correcciones leves y adicion de carrito junto a su detalle de boleta

--- a/ejemploCarrito.html
+++ b/ejemploCarrito.html
@@ -240,9 +240,14 @@
                 </svg>
                 (62 disponibles)</p>
             </div>
-            <div class="d-grid gap-2">
-                <button class="btn btn-primary" type="button">Añadir al Carrito</button>
-                <button class="btn btn-primary" type="button">Comprar</button>
+            <div class="d-grid gap-2 lateral-boton-primario">
+              <!--se añade un boton con link para el carrito/compra-->
+              <!--boton-añadir-->
+                <a href="agregarCarrito.html" class=" lateral-boton-a">
+                  <button class="btn btn-primary lateral-b-comprar" type="button"> Añadir al Carrito </button></a>
+                  <!--oton-compra-->
+                <a href=""  class=" lateral-boton-a">
+                 <button class="btn btn-primary lateral-b-comprar" type="button">Comprar</button></a>
               </div>
         </aside>
     </main>
