--- a/ejemploCarrito.html
+++ b/ejemploCarrito.html
@@ -246,7 +246,7 @@
                 <a href="agregarCarrito.html" class=" lateral-boton-a">
                   <button class="btn btn-primary lateral-b-comprar" type="button"> Añadir al Carrito </button></a>
                   <!--oton-compra-->
-                <a href=""  class=" lateral-boton-a">
+                <a href="compra.html"  class=" lateral-boton-a">
                  <button class="btn btn-primary lateral-b-comprar" type="button">Comprar</button></a>
               </div>
         </aside>
