se completo medioPago.html y se creo compraEfectuada.html

--- a/tipoEnvio.html
+++ b/tipoEnvio.html
@@ -141,7 +141,7 @@
             </article>
             <article class="compra-boton-continuar">
                 <div class="compra-boton-continuar-p1">
-                    <a href="" >
+                    <a href="medioPago.html" >
                         <button class="btn btn-primary" type="button">Continuar</button></a>
                 </div>
             </article>
