--- a/agregarCarrito.html
+++ b/agregarCarrito.html
@@ -196,7 +196,7 @@
                 </div>
             </div>
             <div class="ac-derecho-boton">
-                <a href="compra.html" >
+                <a href="tipoEnvio.html" >
                     <button class="btn btn-primary" type="button">Continuar Compra</button></a>
             </div>
         </section>
