Se completo compraEfectuada.html

--- a/compraEfectuada.html
+++ b/compraEfectuada.html
@@ -90,7 +90,17 @@
         </nav>
         
     </header>
-
+    <main>
+        <section class="cf-section sombra">
+            <div class="cf-titulo">
+                <h1>Compra efectuada.</h1>
+            </div>
+            <div class="cf-boton sombra">
+                <a href="index.html" >
+                    <button class="btn btn-primary" type="button">Volver al Inicio</button></a>
+            </div>
+        </section>
+    </main>
     <!--Bootstraps-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
