--- a/medioPago.html
+++ b/medioPago.html
@@ -134,8 +134,8 @@
                   </div>
                 </div>
             </article>
-            <article class="compra-boton-continuar">
-                <div class="compra-boton-continuar-p1">
+            <article class="mp-boton-continuar">
+                <div class="mp-boton-continuar-p1">
                     <a href="compraEfectuada.html" >
                         <button class="btn btn-primary" type="button">Continuar</button></a>
                 </div>
