--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
     <header>
         <!--Logo-->
         <div class="nav-bar-img">
-          <a href="index.html">
-          <img src="imagenes/mercadolibre logo.png" alt="logo" height="200" width="500">
-          </a>
+          <div class="nav-bar-img1">
+            <a href="index.html">
+            <img src="imagenes/mercadolibre logo.png" alt="logo" height="200" width="500">
+            </a>
+          </div>
           <!--Titulo(posible eliminacion)-->
-        <h1 id="titulo-principal">Mercado libre</h1>
+          <div class="nav-bar-titulo">
+            <h1 id="titulo-principal">Mercado libre</h1>
+          </div>
       </div>
         <!--Barra de busqueda-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary nav-bar  nav-background">
@@ -120,7 +124,7 @@
             <div class="main-producto-tarjeta-seccion">
                 <!--Tarjeta 1-->
                 
-                <div class="card sombra" style="width: 18rem; height: 35rem;">
+                <div class="card espacio-tarjetas sombra" style="width: 18rem; height: 35rem;">
                     <h5>Visto Recientemente</h5>
                     <a href="ejemploCarrito.html">
                       <img src="imagenes/main-tarjeta/card-img-1.png" class="card-img-top" alt="img-1">
@@ -137,7 +141,7 @@
                     </div>
                 </div>
                 <!--Tarjeta 2-->
-                <div class="card sombra" style="width: 18rem; height: 35rem;">
+                <div class="card espacio-tarjetas  sombra" style="width: 18rem; height: 35rem;">
                     <h5>Porque te interesa</h5>
                     <img src="imagenes/main-tarjeta/card-img-2.png" class="card-img-top" alt="img-1">
                     <div class="card-body">
@@ -152,7 +156,7 @@
                     </div>
                 </div>
                 <!--Tarjeta 3-->
-                <div class="card sombra" style="width: 18rem; height: 35rem;">
+                <div class="card espacio-tarjetas  sombra" style="width: 18rem; height: 35rem;">
                     <h5>Lo quieres</h5>
                     <img src="imagenes/main-tarjeta/card-img-3.png" class="card-img-top" alt="img-1">
                     <div class="card-body">
@@ -167,7 +171,7 @@
                     </div>
                 </div>
                 <!--Tarjeta 4-->
-                <div class="card sombra" style="width: 18rem; height: 35rem;">
+                <div class="card espacio-tarjetas  sombra" style="width: 18rem; height: 35rem;">
                     <h5>Lo Deseas</h5>
                     <img src="imagenes/main-tarjeta/card-img-4.png" class="card-img-top" alt="img-1" height="380">
                     <div class="card-body">
@@ -182,7 +186,7 @@
                     </div>
                 </div>
                 <!--Tarjeta 5-->
-                <div class="card sombra" style="width: 18rem; height: 35rem;">
+                <div class="card espacio-tarjetas  sombra" style="width: 18rem; height: 35rem;">
                     <h5>Para los hermanos</h5>
                     <img src="imagenes/main-tarjeta/card-img-5.png" class="card-img-top" alt="img-1">
                     <div class="card-body">
