--- a/medioPago.html
+++ b/medioPago.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="CSS/normalize.css">
     <!--Style-CSS-->
     <link rel="stylesheet" href="CSS/style.css">
+    <!--MediaQuerry-->
+    <link rel="stylesheet" href="CSS/mediaQuerrys.css">
     <!--Bootstraps-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--.-->
@@ -96,7 +98,7 @@
 </header>
   <div class="medioPago-body">
     <!--main medio de pago-->
-    <main>
+    <main class="medioPago.html-main">
         <section class="medio-pago-main-section sombra">
             <div class="compra-titulo">
                 <h1>¿Como quieres pagar?</h1>
@@ -149,7 +151,7 @@
     </main>
 
     <!--Aside medio de pago-->
-    <aside>
+    <aside class="medioPago.html-aside">
         <section class="compra-aside-section sombra">
             <article class="compra-resumen-article">
                 <div class="resumen-titulo">
