agregarCarrito responsive-scroll

--- a/nuevaCuenta.html
+++ b/nuevaCuenta.html
@@ -106,31 +106,31 @@
                 <div class="crearCuenta-campos">
                     <div class="campo">
                         <label for="">Nombre de usuario</label>
-                        <input type="text" placeholder="Nombre de usuario">
+                        <input type="text" id="usuario_nombre" name="usuario_nombre" placeholder="Nombre de usuario">
                     </div>
                     <div class="campo">
                         <label for="">Constraseña</label>
-                        <input type="password" placeholder="Debe contener simbolos mayusculas y numeros.">
+                        <input type="password" id="usuario_contraseña" name="usuario_contraseña" placeholder="Debe contener simbolos mayusculas y numeros.">
                     </div>
                     <div class="campo">
                         <label for="">Email</label>
-                        <input type="email" placeholder="example@gmail.com">
+                        <input type="email" id="usuario_email" name="usuario_email" placeholder="example@gmail.com">
                     </div>
                     <div class="campo">
                         <label for="">Telefono</label>
-                        <input type="number" placeholder="+1234567890">
+                        <input type="number" id="usuario_fono" name="usuario_fono" placeholder="+1234567890">
                     </div>
                     <div class="campo">
                         <label for="">Region/Ciudad</label>
-                        <input type="text" placeholder="Metropolitana/Melipilla">
+                        <input type="text" id="usuario_regionCiudad" name="usuario_regionCiudad" placeholder="Metropolitana/Melipilla">
                     </div>
                     <div class="campo">
                         <label for="">Calle</label>
-                        <input type="text" placeholder="Av.Carlos Avilés">
+                        <input type="text" id="usuario_calle" name="usuario_calle" placeholder="Av.Carlos Avilés">
                     </div>
                     <div class="campo">
                         <label for="">N°Casa/Depto</label>
-                        <input type="number">
+                        <input type="number"  id="usuario_nCasa" name="usuario_nCasa">
                     </div>
 
                     <div  class="formulario-boton">
