--- a/compraEfectuada.html
+++ b/compraEfectuada.html
@@ -96,7 +96,7 @@
     </nav>
     
 </header>
-    <main>
+    <main class="compraEfectuada-main">
         <section class="cf-section sombra">
             <div class="cf-titulo">
                 <h1>Compra efectuada.</h1>
